fixed breakpoint layout issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,12 +16,6 @@ html, body {
   height: 100%;
 }
 
-/* @media (max-width: 688px) {
-  .container {
-    grid-template-columns: repeat(3, 1fr);
-  }
-} */
-
 @media (max-width: 900px) {
   .container {
     grid-template-columns: repeat(3, 1fr);
@@ -301,29 +295,6 @@ html, body {
   color: #34373A;
 }
 
-/* .portfolio-preview-intro {
-  grid-column-start: 2;
-  grid-column-end: 4;
-  padding: 30px 60px;
-} */
-
-/* .portfolio-preview-image {
-  display: block;
-  grid-column-start: 4;
-  grid-column-end: 6;
-  width: 400px;
-}
-
-.portfolio-preview-h1 {
-  font-size: 2.5em;
-}
-
-.portfolio-preview-subtext {
-  font-size: 1.25em;
-  padding-right: 15%;
-  line-height: 1.4em;
-} */
-
 .portfolio-piece {
   height: 350px;
   background-color: #f7f7f7;
@@ -376,7 +347,6 @@ html, body {
   grid-row: 1;
   grid-template-columns: repeat(3, 1fr);
   background-color: #ffffff;
-  border: 1px solid red;
 }
 
 .code4pdx-image {
@@ -405,7 +375,6 @@ html, body {
   grid-row: 3;
   grid-template-columns: repeat(3, 1fr);
   background-color: #ffffff;
-  border: 1px solid orange;
 }
 
 .good-dog-image {
@@ -433,7 +402,6 @@ html, body {
   grid-column-end: 6;
   grid-row: 2;
   grid-template-columns: repeat(3, 1fr);
-  border: 1px solid green;
 }
 
 .autolog-image {
@@ -462,7 +430,6 @@ html, body {
   grid-column-end: 6;
   grid-row: 4;
   grid-template-columns: repeat(3, 1fr);
-  border: 1px solid blue;
 }
 
 .twitter-image {
@@ -485,22 +452,6 @@ html, body {
 }
 
 @media (max-width: 1250px) {
-  /* .portfolio-preview-intro {
-    padding: 30px 30px 30px 60px;
-  }
-
-  .portfolio-preview-image {
-    width: 300px;
-    padding-top: 25px;
-  }
-
-  .portfolio-preview-h1 {
-    font-size: 1.75em;
-  }
-
-  .portfolio-preview-subtext {
-    font-size: 1em;
-  } */
 
   .content-description {
     font-size: 1em;
@@ -533,20 +484,13 @@ html, body {
   }
 }
 
-/* @media (max-width: 950px) {
-  .code4pdx-image, .good-dog-image, .autolog-image, .twitter-image {
-    height: 150px;
-  }
-} */
-
-/* originally max-width: 688px */
 @media (max-width: 900px) {
   .portfolio-wrapper {
     grid-column-start: 1;
     grid-column-end: 4;
     display: grid;
     grid-template-columns: 10% 80% 10%;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     grid-row-gap: 20px;
     margin-bottom: 100px;
     margin-top: 25px;
@@ -554,47 +498,31 @@ html, body {
     color: #34373A;
   }
 
-  /* .portfolio-preview-intro {
-    grid-column: 2;
-    padding: 0;
-    padding-left: 60px;
-  }
-
-  .portfolio-preview-image {
-    display: none;
-  } */
-
   .portfolio-wrapper > .portfolio-h1 {
     grid-row: 1;
     grid-column: 2;
   }
 
-  .portfolio-piece-code4pdx {
+  .portfolio-piece {
     display: grid;
     grid-column: 2;
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  .portfolio-piece-code4pdx {
     grid-row: 1;
-    grid-template-rows: repeat(3, 1fr);
   }
 
   .portfolio-piece-good-dog {
-    display: grid;
-    grid-column: 2;
     grid-row: 3;
-    grid-template-rows: repeat(3, 1fr);
   }
 
   .portfolio-piece-autolog {
-    display: grid;
-    grid-column: 2;
     grid-row: 2;
-    grid-template-rows: repeat(3, 1fr);
   }
   
   .portfolio-piece-twitter {
-    display: grid;
-    grid-column: 2;
     grid-row: 4;
-    grid-template-rows: repeat(3, 1fr);
   }
 
   .portfolio-piece {
@@ -607,7 +535,7 @@ html, body {
   }
   
   .code4pdx-image, .good-dog-image, .autolog-image, .twitter-image {
-    grid-row: 1;
+    grid-row: 2;
     grid-column-start: 1;
     grid-column-end: 4;
     width: 90%;
@@ -616,9 +544,8 @@ html, body {
     height: auto;
   }
   
-  .good-dog-content, .autolog-content, .twitter-content {
-    grid-row-start: 2;
-    grid-row-end: 4;
+  .code4pdx-content, .good-dog-content, .autolog-content, .twitter-content {
+    grid-row: 1;
     grid-column-start: 1;
     grid-column-end: 4;
     padding: 0 20px;
@@ -631,9 +558,6 @@ html, body {
     margin-top: 0;
   }
 
-  .portfolio-piece {
-    height: 550px;
-  }
 }
 
 @media (max-width: 375px) {
